# k8s-scale-app-rs

./: .dockerignore  Cargo.toml  Containerfile  Containerfile.debug  README.md  about.hbs  about.toml
.github/workflows/: build-publish.yaml
chart/: Chart.yaml  values-dev.yaml  values-preprod.yaml  values-prod.yaml  values.yaml
chart/templates/: _helpers.tpl  cronjob.yaml  extra-ca-configmap.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
kustomize/base/: cronjob.yaml  kustomization.yaml
kustomize/components/extra-ca/: cronjob-patch.yaml  kustomization.yaml
kustomize/components/rbac/: kustomization.yaml  role.yaml  rolebinding.yaml
kustomize/components/serviceaccount/: kustomization.yaml
kustomize/overlays/dev/: ca-bundle.pem  cronjob-patch.yaml  kustomization.yaml
kustomize/overlays/preprod/: cronjob-patch.yaml  kustomization.yaml
kustomize/overlays/prod/: cronjob-patch.yaml  kustomization.yaml
src/: main.rs
tests/: cli.rs  cluster.rs
