[package]
name = "k8s-scale-app-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Aleks <al-git001@none.at>"]
license = "MIT"
description = "CLI to set the replica count of a Kubernetes Deployment via the Kubernetes API"
repository = "https://github.com/git001/k8s-scale-app-rs"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls"] }
mimalloc = { version = "0.1", default-features = false }
pem = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
